objects/BTx_Engagement_Activity__c.object
<CustomObject>
    <fields>
        <fullName>LOB_Sponsor_Name__c</fullName>
        <description>LOB Sponsor Name</description>
        <label>ZZ_LOB Sponsor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOB_Sponsor_Relationship_Start_Date__c</fullName>
        <description>LOB Sponsor Relationship Start Date</description>
        <label>ZZ_LOB Sponsor Relationship Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LOB_Sponsor__c</fullName>
        <description>LOB Sponsor</description>
        <label>ZZ_LOB Sponsor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CEO</fullName>
                </value>
                <value>
                    <fullName>CFO</fullName>
                </value>
                <value>
                    <fullName>CIO</fullName>
                </value>
                <value>
                    <fullName>CMIO</fullName>
                </value>
                <value>
                    <fullName>CMO</fullName>
                </value>
                <value>
                    <fullName>CMO-HC</fullName>
                </value>
                <value>
                    <fullName>CNO</fullName>
                </value>
                <value>
                    <fullName>CXO-Other</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Sr. Manager/Manager</fullName>
                </value>
                <value>
                    <fullName>SVP</fullName>
                </value>
                <value>
                    <fullName>VP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Programs__c</fullName>
        <description>Marketing Programs</description>
        <label>Marketing Programs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OD_RM_Engaged_Y_N__c</fullName>
        <label>OD/RM Engaged (Y/N)?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OD_RM_Engagement_Level__c</fullName>
        <label>OD/RM Engagement Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Aware</fullName>
                </value>
                <value>
                    <fullName>2-Involved</fullName>
                </value>
                <value>
                    <fullName>3-Playing a Leadership Role</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offer_and_Accept_Phase_Start_Date__c</fullName>
        <description>Offer and Accept Phase Start Date</description>
        <label>Offer and Accept Phase Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <description>Operation</description>
        <label>Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Central-CHICAGO-WISCONSIN ENTERPRISE OPERATION</fullName>
                </value>
                <value>
                    <fullName>Central-CROSSROADS ENTERPRISE_OPERATION</fullName>
                </value>
                <value>
                    <fullName>Central-GATEWAY ENTERPRISE_OPERATION</fullName>
                </value>
                <value>
                    <fullName>Central-MICHIGAN-OHIO ENTERPRISE OPERATION</fullName>
                </value>
                <value>
                    <fullName>Central-MINNESOTA LAKES ENTERPRISE OPERATION</fullName>
                </value>
                <value>
                    <fullName>East-GEO ATLANTIC OPERATION</fullName>
                </value>
                <value>
                    <fullName>East-GEO NEW YORK OPERATION</fullName>
                </value>
                <value>
                    <fullName>East-GEO NORTHEAST OPERATION</fullName>
                </value>
                <value>
                    <fullName>East-GEO_TRISTATE_OPERATION</fullName>
                </value>
                <value>
                    <fullName>South-CAROLINAS_AND_COKE_OPERATION</fullName>
                </value>
                <value>
                    <fullName>South-FLORIDA_OPERATION</fullName>
                </value>
                <value>
                    <fullName>South-RED RIVER OPERATION</fullName>
                </value>
                <value>
                    <fullName>South-TAG OPERATION</fullName>
                </value>
                <value>
                    <fullName>West-CALIFORNIA ENTERPRISE OPERATION</fullName>
                </value>
                <value>
                    <fullName>West-NORCAL TRANS OPERATION</fullName>
                </value>
                <value>
                    <fullName>West-PACIFIC NORTHWEST OPERATION</fullName>
                </value>
                <value>
                    <fullName>West-ROCKY MOUNTAIN_OPERATION</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outcomes_Review_Completion_Date__c</fullName>
        <description>Outcomes Review (Completion) Date</description>
        <label>Outcomes Review (Completion) Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identify the secondary partner aligned to this engagement. If no partner is aligned the Partner not required checkbox must be checked.</description>
        <label>Cisco Partner2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>BTx Projects/Activities (Partner2)</relationshipLabel>
        <relationshipName>BVA_Partner2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identify the tertiary partner aligned to this engagement. If no partner is aligned the Partner not required checkbox must be checked.</description>
        <label>Cisco Partner3</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>BTx Projects/Activities (Partner3)</relationshipLabel>
        <relationshipName>BVA_Partner3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_2_Scope_of_Involvement_Other__c</fullName>
        <label>Partner 2-Scope of Involvement-Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_2_Scope_of_Involvement__c</fullName>
        <inlineHelpText>Select all that apply</inlineHelpText>
        <label>Partner 2-Scope of Involvement</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application Software</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Change Management</fullName>
                </value>
                <value>
                    <fullName>Deployment Hardware</fullName>
                </value>
                <value>
                    <fullName>Financial Business Case</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Solution Provider</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Technical Discovery/POC</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Value Realization Analysis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_3_Scope_of_Involvement_Other__c</fullName>
        <inlineHelpText>Select all that apply</inlineHelpText>
        <label>Partner 3-Scope of Involvement-Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_3_Scope_of_Involvement__c</fullName>
        <inlineHelpText>Select all that apply</inlineHelpText>
        <label>Partner 3-Scope of Involvement</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application Software</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Change Management</fullName>
                </value>
                <value>
                    <fullName>Deployment Hardware</fullName>
                </value>
                <value>
                    <fullName>Financial Business Case</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Solution Provider</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Technical Discovery/POC</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Value Realization Analysis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Manager_Engaged__c</fullName>
        <label>Partner Manager Engaged?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Practice_Advisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Engagement/BTx Owner</description>
        <inlineHelpText>BTx Advisor leading and/or orchestrating this engagement</inlineHelpText>
        <label>Practice Advisor</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Please assign the project to a current Practice Advisor.</errorMessage>
            <filterItems>
                <field>User.Title</field>
                <operation>contains</operation>
                <value>PRACTICE</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Id</field>
                <operation>equals</operation>
                <value>00e30000000dcbg,00e30000000dcbf,00e30000000dfUE,00e30000000eca0</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>BTx_Engagements_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Practice_Architect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Individual leading this engagement. May be someone other than the BTx account lead, including other Cisco resource, or partner. Must be an authorized SFDC user.</description>
        <inlineHelpText>BTx Architect on this engagement (if applicable)</inlineHelpText>
        <label>Practice Architect</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Please assign the project to a current Practice Architect.</errorMessage>
            <filterItems>
                <field>User.Title</field>
                <operation>contains</operation>
                <value>PRACTICE</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Id</field>
                <operation>equals</operation>
                <value>00e30000000dcbg,00e30000000dcbf,00e30000000dfUE,00e30000000eca0</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>BTx_Engagements_Activities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Program Manager</description>
        <label>Program Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BTx_Project_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Comments__c</fullName>
        <description>Please input anything you want to hi-light in terms of next steps, gaps, action items or hi-lights</description>
        <inlineHelpText>Please input anything you want to hi-light in terms of next steps, gaps, action items or hi-lights</inlineHelpText>
        <label>Project Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Contribution_Level__c</fullName>
        <description>Applies to BTx effort as a whole: 
LEADER - Responsible for leadership and outcome delivery 
CONTRIBUTOR - Responsible for only a portion of the project. Likely engagement after the sale 
INFLUENCER - Provides expertise. No responsibility for delivery</description>
        <inlineHelpText>Applies to BTx effort as a whole: 
LEADER - Responsible for leadership and outcome delivery 
CONTRIBUTOR - Responsible for only a portion of the project. Likely engagement after the sale 
INFLUENCER - Provides expertise. No responsibility for delivery</inlineHelpText>
        <label>Project Contribution Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Leader</fullName>
                </value>
                <value>
                    <fullName>Contributor</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <description>Unique name for this project.  If project aligns to an existing customer project, use the customer's language.</description>
        <inlineHelpText>Unique name for this project.  If project aligns to an existing customer project, use the customer's language.</inlineHelpText>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Phase__c</fullName>
        <description>Project Phase</description>
        <formula>IF (!ISBLANK(Value_Realization_Date__c), '5-Customer Value',
IF (!ISBLANK(Offer_and_Accept_Phase_Start_Date__c), '4-Offer and Accept',
IF (!ISBLANK(Proof_of_Value_Phase_Phase_Start_Date__c), '3-Proof of Value',
IF (!ISBLANK(Identify_and_Design_Phase_Start_Date__c), '2-Identify and Design',
IF (!ISBLANK(Customer_Discovery_Phase_Start_Date__c), '1-Customer Discovery',
'')))))</formula>
        <label>Project Phase</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <description>Documents the changes in engagement progress.
Ongoing - Engagement is progressing at the expected pace, deadlines and milestones are being regularly met.
Slowed - Engagement is not progressing at the expected pace but is still making progress, or is expected to resume progress in the near future.
Stopped/Abandoned - The progress of the engagement has stopped and is not expected to resume in the near future.
Closed-Won - The opportunity has closed resulting in a sale for Cisco and/or a partner. The opportunity could have been abandoned by either Cisco, or the customer.
Closed-Lost- The opportunity has closed resulting in a sale for our competitor.</description>
        <inlineHelpText>ONGOING-Progressing at expected pace

SLOWED-Slow progress or expected to resume in the near future

STOPPED/ABANDONED-Stopped by Cisco/Customer &amp; not expected to resume

CLOSED-WON-Sale for Cisco and/or Partner

CLOSED-LOST-Sale for a competitor</inlineHelpText>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ongoing</fullName>
                </value>
                <value>
                    <fullName>Slowed</fullName>
                </value>
                <value>
                    <fullName>Stopped Abandoned</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proof_of_Value_Phase_Phase_Start_Date__c</fullName>
        <description>Proof of Value Phase Start Date</description>
        <label>Proof of Value Phase Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Qualification_Date__c</fullName>
        <description>Qualification Date</description>
        <label>Qualification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quantify_Expected_Business_Outcome_Value__c</fullName>
        <description>Quantify Expected Business Outcome Value</description>
        <label>zQuantifyExpected Business Outcome Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Project_not_Ongoing__c</fullName>
        <description>Reason for Engagement not in Ongoing status</description>
        <label>Reason for Project not Ongoing</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Project_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>BTx Resource Unavailable</fullName>
                </value>
                <value>
                    <fullName>Cisco Resource Unavailable (Sales, Svc, Product…)</fullName>
                </value>
                <value>
                    <fullName>Current Solution Portfolio Does Not Address Customer Need</fullName>
                </value>
                <value>
                    <fullName>Customer Cancelled Project</fullName>
                </value>
                <value>
                    <fullName>Customer Delay-Business Sponsor</fullName>
                </value>
                <value>
                    <fullName>Customer Delay-IT Sponsor</fullName>
                </value>
                <value>
                    <fullName>Customer Organizational Change</fullName>
                </value>
                <value>
                    <fullName>Insufficient Cisco value in the Project</fullName>
                </value>
                <value>
                    <fullName>Insufficient ROI/Business Case</fullName>
                </value>
                <value>
                    <fullName>Lack of Solution Capabilities</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>No Customer Budget/Funding</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other Cisco Resource Unavailable</fullName>
                </value>
                <value>
                    <fullName>Sales Team Unavailable</fullName>
                </value>
                <value>
                    <fullName>Unable to Secure Right Customer Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Unqualified Opportunity</fullName>
                </value>
                <value>
                    <fullName>Waiting for External Customer Partner/Consultant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scope_Agreement_Date__c</fullName>
        <description>Scope Agreement Date</description>
        <label>Scope Agreement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sponsor_Date__c</fullName>
        <description>Sponsor Date</description>
        <label>Sponsor Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Supporting_Practice_Advisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Supporting Practice Advisor</description>
        <label>Supporting Practice Advisor</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Please assign the project to a current Supporting Practice Advisor.</errorMessage>
            <filterItems>
                <field>User.Title</field>
                <operation>contains</operation>
                <value>PRACTICE</value>
            </filterItems>
            <filterItems>
                <field>$User.ProfileId</field>
                <operation>equals</operation>
                <value>00e30000000dcbg,00e30000000dcbf,00e30000000dfUE,00e30000000eca0</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>BTx_Supporting_Practice_Advisor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supporting_Practice_Architect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Supporting Practice Architect</description>
        <label>Supporting Practice Architect</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Please assign the project to a current Supporting Practice Architect.</errorMessage>
            <filterItems>
                <field>User.Title</field>
                <operation>contains</operation>
                <value>PRACTICE</value>
            </filterItems>
            <filterItems>
                <field>$User.ProfileId</field>
                <operation>equals</operation>
                <value>00e30000000dcbg,00e30000000dcbf,00e30000000dfUE,00e30000000eca0</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>BTx_Supporting_Practice_Architect</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transition_to_Delivery_Teams_Date__c</fullName>
        <description>Transition to Delivery Teams Date</description>
        <label>Transition to Delivery Teams Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Value_Analyst_Engaged__c</fullName>
        <label>Value Analyst Engaged?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value_Realization_Date__c</fullName>
        <description>Value Realization Date</description>
        <label>Value  Realization Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <label>Lead Practice Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Experience</fullName>
                </value>
                <value>
                    <fullName>Workforce Experience</fullName>
                </value>
                <value>
                    <fullName>Business Analytics</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Mfg &amp; Energy</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Retail &amp; Hospitality</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Business Value Approach (BVA) is a sales process that targets our customers' critical business needs. It enables account teams to identify sales opportunities and best position Cisco products, services and solutions.
The BVA session will help you uncover the customer’s business initiatives, develop a hypothesis to address the customer’s business needs with a Cisco Solution, and develop a specific sales approach to move distinct opportunities through the BVA process.</description>
    <label>BTx Project/Activity</label>
    <nameField>
        <displayFormat>BTx Project-{0}</displayFormat>
        <label>BTx Project/Activity</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BTx Projects/Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Practice_Advisor__c</columns>
        <columns>Practice_Architect__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>BTx_Engagement</fullName>
        <active>true</active>
        <description>Customer scoped Business Outcome Approach Project</description>
        <label>BTx Engagement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_Project_Activity</fullName>
        <active>true</active>
        <description>Support in early pre-sales activity and/or customer/acct/partner planning</description>
        <label>Non Project Activity</label>
    </recordTypes>
    <validationRules>
        <fullName>Cisco_Partner1_Primary_Partner_Check</fullName>
        <active>true</active>
        <description>Validation rule to check if only Cisco Partner1 is set as Primary.</description>
        <errorConditionFormula>TEXT(Is_Cisco_Partner_1_Primary_Partner__c) = 'Yes' &amp;&amp; ( TEXT(Is_Cisco_Partner_2_Primary_Partner__c) = 'Yes' ||  TEXT(Is_Cisco_Partner_3_Primary_Partner__c) = 'Yes' || TEXT(Is_Focus_Partner_Primary_Partner__c) = 'Yes')</errorConditionFormula>
        <errorDisplayField>BTx_Focus_Partner_Name__c</errorDisplayField>
        <errorMessage>Please select only one Partner as Primary Partner.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cisco_Partner2_Primary_Partner_Check</fullName>
        <active>true</active>
        <description>Validation rule to check if only Cisco Partner2 is set as Primary.</description>
        <errorConditionFormula>TEXT(Is_Cisco_Partner_2_Primary_Partner__c) = 'Yes' &amp;&amp; (TEXT(Is_Cisco_Partner_1_Primary_Partner__c) = 'Yes' &amp;&amp;  TEXT(Is_Cisco_Partner_3_Primary_Partner__c) = 'Yes' &amp;&amp;  TEXT(Is_Focus_Partner_Primary_Partner__c) = 'Yes')</errorConditionFormula>
        <errorDisplayField>Partner2__c</errorDisplayField>
        <errorMessage>Please select only one Partner as Primary Partner.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cisco_Partner3_Primary_Partner_Check</fullName>
        <active>true</active>
        <description>Validation rule to check if only Cisco Partner3 is set as Primary.</description>
        <errorConditionFormula>TEXT(Is_Cisco_Partner_3_Primary_Partner__c) = 'Yes' &amp;&amp; (TEXT(Is_Cisco_Partner_1_Primary_Partner__c) = 'Yes' &amp;&amp;  TEXT(Is_Cisco_Partner_2_Primary_Partner__c) = 'Yes' &amp;&amp;  TEXT(Is_Focus_Partner_Primary_Partner__c) = 'Yes')</errorConditionFormula>
        <errorDisplayField>Partner3__c</errorDisplayField>
        <errorMessage>Please select only one Partner as Primary Partner.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Focus_Partner_Primary_Partner_Check</fullName>
        <active>true</active>
        <description>Validation rule to check if only Focus Partner is set as Primary.</description>
        <errorConditionFormula>TEXT( Is_Focus_Partner_Primary_Partner__c ) = 'Yes' &amp;&amp; (TEXT(Is_Cisco_Partner_1_Primary_Partner__c) = 'Yes' ||  TEXT(Is_Cisco_Partner_2_Primary_Partner__c) = 'Yes' ||  TEXT(Is_Cisco_Partner_3_Primary_Partner__c) = 'Yes')</errorConditionFormula>
        <errorDisplayField>Focus_Partner__c</errorDisplayField>
        <errorMessage>Please select only one Partner as Primary Partner.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_BTx_Activity1_Description</fullName>
        <active>true</active>
        <description>Description is mandatory if 'other' is selected in BTx Activity1 field.</description>
        <errorConditionFormula>$RecordType.Id  =  $Setup.ObjectRecordTypeIds__c.BTx_Non_Engagement_Activity__c &amp;&amp;
 TEXT( BTx_Activity_1__c )  = 'Other (provide description below)'  &amp;&amp;
 BTx_Activity_1_Description_for_Other__c  = ''</errorConditionFormula>
        <errorDisplayField>BTx_Activity_1_Description_for_Other__c</errorDisplayField>
        <errorMessage>Enter the description for the Non-Project Activity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_BTx_Activity2_Description</fullName>
        <active>true</active>
        <description>Description is mandatory if 'other' is selected in BTx Activity2 field.</description>
        <errorConditionFormula>$RecordType.Id  =  $Setup.ObjectRecordTypeIds__c.BTx_Non_Engagement_Activity__c &amp;&amp;
 TEXT( BTx_Activity_2__c )  = 'Other (provide description below)'  &amp;&amp;
 BTx_Activity_2_Description_for_Other__c  = ''</errorConditionFormula>
        <errorDisplayField>BTx_Activity_2_Description_for_Other__c</errorDisplayField>
        <errorMessage>Enter the description for the Non-Project Activity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_BTx_Activity3_Description</fullName>
        <active>true</active>
        <description>Description is mandatory if 'other' is selected in BTx Activity3 field.</description>
        <errorConditionFormula>$RecordType.Id  =  $Setup.ObjectRecordTypeIds__c.BTx_Non_Engagement_Activity__c &amp;&amp;
 TEXT( BTx_Activity_3__c )  = 'Other (provide description below)'  &amp;&amp;
 BTx_Activity_3_Description_for_Other__c  = ''</errorConditionFormula>
        <errorDisplayField>BTx_Activity_3_Description_for_Other__c</errorDisplayField>
        <errorMessage>Enter the description for the Non-Project Activity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_BTx_Activity4_Description</fullName>
        <active>true</active>
        <description>Description is mandatory if 'other' is selected in BTx Activity4 field.</description>
        <errorConditionFormula>$RecordType.Id  =  $Setup.ObjectRecordTypeIds__c.BTx_Non_Engagement_Activity__c &amp;&amp;
 TEXT( BTx_Activity_4__c )  = 'Other (provide description below)'  &amp;&amp;
 BTx_Activity_4_Description_for_Other__c  = ''</errorConditionFormula>
        <errorDisplayField>BTx_Activity_4_Description_for_Other__c</errorDisplayField>
        <errorMessage>Enter the description for the Non-Project Activity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_BTx_Activity5_Description</fullName>
        <active>true</active>
        <description>Description is mandatory if 'other' is selected in BTx Activity5 field.</description>
        <errorConditionFormula>$RecordType.Id  =  $Setup.ObjectRecordTypeIds__c.BTx_Non_Engagement_Activity__c &amp;&amp;
 TEXT( BTx_Activity_5__c )  = 'Other (provide description below)'  &amp;&amp;
 BTx_Activity_5_Description_for_Other__c  = ''</errorConditionFormula>
        <errorDisplayField>BTx_Activity_5_Description_for_Other__c</errorDisplayField>
        <errorMessage>Enter the description for the Non-Project Activity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_BTx_Activity6_Description</fullName>
        <active>true</active>
        <description>Description is mandatory if 'other' is selected in BTx Activity6 field.</description>
        <errorConditionFormula>$RecordType.Id  =  $Setup.ObjectRecordTypeIds__c.BTx_Non_Engagement_Activity__c &amp;&amp;
 TEXT( BTx_Activity_6__c )  = 'Other (provide description below)'  &amp;&amp;
 BTx_Activity_6_Description_for_Other__c  = ''</errorConditionFormula>
        <errorDisplayField>BTx_Activity_6_Description_for_Other__c</errorDisplayField>
        <errorMessage>Enter the description for the Non-Project Activity</errorMessage>
    </validationRules>
</CustomObject>